examples/test/testpolicy5856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5856
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key6: value24
      key4: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value26
          key35: value38
          key0: value13
      podSelector:
        matchLabels:
          key49: value14
          key46: value29
